--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+Version 0.3.0:
+ - Merge tag '0.2.1' into develop
+ - modifying Rakefile for rsync deployment
+ - modifying Rakefile for rsync deployment
+ - Merge remote-tracking branch 'origin/develop' into develop
+ - modifying Rakefile for rsync deployment
+ - configuring Rakefile for rsync deployment
+
 Version 0.2.1:
  - adding CNAME
  - setting up GitHub deployment
