--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.3.4:
+ - adding tag cloud
+ - Merge tag '0.3.3' into develop
+ - Merge branch 'release/0.3.3'
+
 Version 0.3.3:
  - adding card layout to blog post index
  - updating disqus config
