--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.3.6:
+ - adding 3d category cloud
+ - Merge tag '0.3.5' into develop
+ - Merge branch 'release/0.3.5'
+
 Version 0.3.5:
  - adding Facebook like box
  - Merge tag '0.3.4' into develop
