--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.3.11.1:
+ - updating octopress3
+ - Merge branch 'release/0.3.11'
+
 Version 0.3.11:
  - Merge pull request #8 from FluxAugur/feature/adding-flattr
  - adding files to enable flattr
