--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,20 @@
+Version 0.3.12:
+ - adding images
+ - editing
+ - added kramdown
+ - adding favicons, touch icons, facebook_facepile
+ - adding favicons
+ - updating footer
+ - Merge tag '0.3.11.1' into develop
+ - Merge branch 'hotfix/0.3.11.1'
+ - updating octopress3
+ - Merge pull request #9 from FluxAugur/feature/adding-omniauth-facebook
+ - Merge tag '0.3.11' into develop
+ - fixing javascript errors
+ - updating config.ru to unescape request.path for 404
+ - updating config.ru to unescape request.path for 404
+ - removing extraneous page ranks
+
 Version 0.3.11.1:
  - updating octopress3
  - Merge branch 'release/0.3.11'
