--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,18 @@
+Version 0.3.16:
+ - finishing part 9; updating styles
+ - adding part 9; updating links
+ - finishing part 8
+ - adding part 8; updating links
+ - finishing part 7
+ - updating part 7; correcting minor typos
+ - adding part 7; updating links
+ - finishing part 6
+ - updating part 6, moving terms from part 6 to part 5
+ - adding part 6, updating primer links
+ - updating links
+ - adding part 6, updating links, updating code block styling, correcting minor typos
+ - adding part 5, updating links
+
 Version 0.3.15:
  - updating call to action style
 
